...
                            color: const Color(0xFF41415F),
                            width: 2,
                          ),
                          borderRadius: BorderRadius.circular(8),
                        ),
                        child: TextFormField(
                          key: const Key("emailField"),
                          initialValue: '',
                          style: const TextStyle(
                            color: const Color(0xFF41415F),
                          ),
                          decoration: const InputDecoration(
                            // hintStyle: TextStyle(color: Colors.white),
...
                            color: const Color(0xFF41415F),
                            width: 2,
                          ),
                          borderRadius: BorderRadius.circular(8),
                        ),
                        child: TextFormField(
                          key: const Key("passwordField"),
                          initialValue: '',
                          style: const TextStyle(
                            color: const Color(0xFF41415F),
                          ),
                          decoration: const InputDecoration(
                            // hintText: 'Password',
...
                    ]),
              ),
              const SizedBox(height: 32),
              Padding(
                padding: const EdgeInsets.symmetric(horizontal: 40),
                child: ElevatedButton(
                  key: const Key("loginButton"),
                  style: ElevatedButton.styleFrom(
                    primary: const Color(0xFFF9C35C),
                    fixedSize: const Size(243, 41),
                  ),
                  onPressed: () {
                    // Navigator.of(context).pushNamed(BuildingList.routeName);
...
