...
                const SizedBox(
                  height: 16,
                ),
                Align(
                  alignment: Alignment.centerLeft,
                  child: TextButton.icon(
                    key: Key('addCategoryBtn'),
                    icon: const Icon(Icons.add),
                    onPressed: () {
                      Navigator.of(context).pushNamed(
                        AddCategory.routeName,
                        arguments: CategoryArgument(bldgId: bldgId),
                      );
...
