...

    return !checkRegex(NAME_REGEX, name) ? "Invalid name." : null;
  }

  static String? validateEmail(String? email) {
    if (email == null || email.isEmpty) {
      return 'Email is required! Can\'t be null';
    }

    return !checkRegex(EMAIL_REGEX, email) ? "Invalid email address." : null;
  }

  static String? validatePassword(String? password) {
    if (password == null || password.isEmpty) {
      return 'Password is required!';
    }

    return !checkRegex(PASSWORD_REGEX, password)
        ? "Password must be at least 8 characters and contain a number, a  special character, a capital and a small letter."
        : null;
  }
...
